--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="commons-csv-1.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
